@@ -593,6 +593,7 @@ All (GUI):
 - Added wxEVT_COMMAND_DIRCTRL_CHANGED event (troelsk).
 - Added wxControl::GetSizeFromTextSize() (Manuel Martin).
 - Optionally allow showing tooltips for disabled ribbon buttons (wxBen).
+- Add wxTL_NO_HEADER style to wxTreeListCtrl (robboto).
 
 wxGTK:
 
